# mcabber

./: .hgignore
mcabber/: CMakeLists.txt  cmake_uninstall.cmake  cmake_uninstall.cmake.in  dependencies.cmake
mcabber/doc/: CMakeLists.txt
mcabber/doc/guide/: CMakeLists.txt
mcabber/doc/help/: CMakeLists.txt
mcabber/macros/: macros.cmake
mcabber/mcabber/: CMakeLists.txt  config-cmake.h.in  main.c  nohtml.c  otr.c  pgp.c  screen.c  utils.c
mcabber/modules/: CMakeLists.txt
mcabber/modules/beep/: CMakeLists.txt
mcabber/modules/fifo/: CMakeLists.txt
mcabber/modules/urlregex/: CMakeLists.txt
mcabber/modules/xttitle/: CMakeLists.txt
